# pvctl

./: .gitignore  CLAUDE.md  README.md  pvctl.sh  pyproject.toml  skills-lock.json
badger/: boot.py  config.py  display.py  hub.py  main.py
scripts/: explore_control.py  explore_hub.py  explore_rooms.py  explore_scenes.py  explore_schedules.py  explore_shades.py
specs/: spec.md
src/pvctl/: __init__.py  cli.py  config.py  display.py  schedule_manager.py  utils.py
src/pvctl/api/: __init__.py  client.py  models.py
src/pvctl/commands/: hub.py  init.py  room.py  scene.py  schedule.py  shade.py  status.py
tests/: conftest.py  test_config.py  test_models.py  test_schedule.py  test_utils.py
